[package]
name = "vips"
version = "0.1.0-alpha.1"
authors = ["elbaro <elbaro@github>"]
description = "A rust binding to libvips."
keywords = ["vips", "image", "libvips"]
documentation = "https://docs.rs/vips"
repository = "https://github.com/elbaro/vips-rs"
readme = "README.md"
categories = ["multimedia::images"]
license = "MIT"

[dependencies]
#vips-sys = "0.1.0"
vips-sys = {git = "https://github.com/elbaro/vips-sys.git"}
lazy_static = "1.0.0"

[dev-dependencies]
compiletest_rs = "*"

[package.metadata.docs.rs]
features = [ "docs" ]
