[package]
name = "vips"
version = "0.1.0-alpha.2"
authors = ["elbaro <elbaro@github>"]
description = "A rust binding to libvips."
keywords = ["vips", "image", "libvips"]
documentation = "https://elbaro.github.io/vips-rs/vips/"
repository = "https://github.com/elbaro/vips-rs"
readme = "README.md"
categories = ["multimedia::images"]
license = "MIT"

[dependencies]
vips-sys = "0.1.2"
lazy_static = "1.0.0"

[dev-dependencies]
compiletest_rs = "0.3.11"

[package.metadata.docs.rs]
features = [ "docs" ]
